# 100-days-of-solana

./: LICENSE  README.md
day-01-keypair-devnet-sol/: README.md  check-balance.mjs  create-wallet.mjs  package.json
day-02-persistent-wallet/: .gitignore  README.md  package.json  persistent-wallet.mjs
day-03-sol-and-lamports/: .gitignore  README.md  day-03-lamports.mjs  package.json
day-04-browser-wallet/: .gitignore  README.md  package.json
day-05-wallet-types/: README.md
day-08-read-solana/: README.md  index.html  read-balance.mjs
day-09-fetch-transactions/: README.md  fetch-transactions.mjs
day-10-dashboard/: README.md  dashboard-standalone.html  index.html  main.js  package.json  style.css
day-11-accounts-vs-databases/: README.md
day-12-compare-networks/: README.md  compare-networks.mjs  package.json
day-13-week2-reflection/: README.md
day-14-amplify-week2/: README.md
day-15-transaction-anatomy/: README.md
day-16-first-sol-transfer/: README.md
day-17-transfer-tool/: README.md  transfer.mjs
day-18-confirmation-ui/: README.md  transfer.mjs
day-19-failed-transactions/: README.md  force-fail.mjs
day-20-write-about-transactions/: README.md
day-21-share-transfer-tool/: README.md
day-22-inspect-account-data/: README.md
day-23-account-explorer/: README.md  explorer.mjs  package.json
day-24-decode-account-data/: README.md  decode.mjs  package.json
day-25-system-program-accounts/: README.md
day-26-solana-explorer/: README.md
day-27-write-account-model/: README.md
day-28-share-explorer/: README.md
day-29-spl-token/: README.md
day-30-token2022-metadata/: README.md
day-31-transfer-fee/: README.md
day-32/: README.md
day-33/: README.md
day-36/: README.md
day-37/: README.md
day-38/: README.md
day-39/: README.md
day-40/: README.md
day-41/: README.md
day-42/: README.md
day-43/: README.md
day-44/: README.md
day-45/: README.md
day-46/: README.md
day-47/: README.md
day-48/: README.md
day-49/: README.md
day-50/: README.md
day-51/: README.md
day-52/: README.md
day-53/: README.md
day-54/: README.md
day-55/: README.md
day-56/: README.md
day-57-anchor-counter/: Anchor.toml  Cargo.toml  README.md  package.json
day-58-counter-state/: Anchor.toml  Cargo.toml  README.md
day-58-counter-state/programs/counter/: Cargo.toml
day-58-counter-state/programs/counter/src/: lib.rs
day-58-counter-state/programs/counter/tests/: counter.rs
day-59-anchor-increment/: README.md  counter.rs  lib.rs
day-60-failure-tests/: Anchor.toml  BADGE.md  Cargo.toml  README.md
day-60-failure-tests/programs/counter/: Cargo.toml  build.rs
day-60-failure-tests/programs/counter/src/: lib.rs
day-60-failure-tests/programs/counter/tests/: counter.rs
day-61-mutation-testing/: Anchor.toml  Cargo.toml  README.md
day-61-mutation-testing/programs/counter/: Cargo.toml
day-61-mutation-testing/programs/counter/src/: lib.rs
day-61-mutation-testing/programs/counter/tests/: counter.rs
day-62-anchor-post/: README.md
day-63-amplify-counter/: README.md
day-64-derive-pda/: README.md
day-72-token-cpi/programs/token_cpi/: Cargo.toml
day-72-token-cpi/programs/token_cpi/src/: lib.rs
day-78/: README.md
(+39 files in other folders)
