[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lbt = true

# ── Block-buffer fix ─────────────────────────────────────────────────────────
# block-buffer v0.12.1 uses `edition2024` which Solana's bundled Cargo 1.79
# cannot parse. Pin both versions used transitively to ones that work.
[patch.crates-io]
block-buffer = { version "= 0.10.4" }
