[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.0"

[dev-dependencies]
litesvm = "0.6"
solana-instruction = "2"
solana-keypair = "2"
solana-signer = "2"
solana-transaction = "2"
