[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.0"
# Pin deps that ship edition2024 in newer versions — incompatible with
# the Cargo 1.79 bundled inside cargo-build-sbf / anchor build.
bytemuck_derive = "=1.8.1"
crypto-common = "=0.1.6"
block-buffer = "=0.10.4"

[dev-dependencies]
litesvm = "0.6"
solana-instruction = "2"
solana-keypair = "2"
solana-signer = "2"
solana-transaction = "2"
