[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[[test]]
name = "counter"
path = "tests/counter.rs"

[features]
default = []
cpi = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }

[dev-dependencies]
litesvm        = "0.4"
solana-instruction = "2"
solana-keypair  = "2"
solana-signer   = "2"
solana-transaction = "2"
