[package]
name = "token_cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-cx = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0"
anchor-spl = { version = "1.0", features = ["idl-build"] }
